feat(home): Improve accessibility.

--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,8 @@
   <body>
     <header class="header header--primary">
         <div class="header__container">
-        <a class="header__logo" href="#">
-          <img src="images/logo.svg" alt="">
+        <a class="header__logo" href="#" title="Cursief web collective">
+          <img src="images/logo.svg" alt="Cursief logo">
         </a>
         <nav class="navigation">
           <ul class="navigation__list">
@@ -31,22 +31,22 @@
         </nav>
         <ul class="social">
           <li class="social-item">
-            <a class="social-item__anchor" href="#">
+            <a class="social-item__anchor" href="#" title="Go to our Twitter profile">
               <img src="images/icon-twitter.svg" alt="">
             </a>
           </li>
           <li class="social-item">
-            <a class="social-item__anchor" href="#">
+            <a class="social-item__anchor" href="#" title="Go to our LinkedIn page">
               <img src="images/icon-linkedin.svg" alt="">
             </a>
           </li>
           <li class="social-item">
-            <a class="social-item__anchor" href="#">
+            <a class="social-item__anchor" href="#" title="Go to our GitHub page">
               <img src="images/icon-github.svg" alt="">
             </a>
           </li>
           <li class="social-item">
-            <a class="social-item__anchor" href="#">
+            <a class="social-item__anchor" href="#" title="Go to our Dribbble page">
               <img src="images/icon-dribbble.svg" alt="">
             </a>
           </li>
@@ -69,7 +69,7 @@
           <div class="section__text">
             <h1>We are the web generation</h1>
             <p class="section__description">Cursief is a pool of web-veterans with years of experience creating websites, webshops and webapps. Being bundled under one name gives us a lot of flexibility taking on small and large projects, our members scale depending on what you need for your company and project.</p>
-            <a class="readmore" href="#">Read more</a>
+            <a class="readmore" href="#" title="Read more about what Cursief is">Read more</a>
           </div>
           <div class="section__media">
             <img src="images/introduction.png" alt="">
@@ -82,7 +82,7 @@
           <p class="section__description">Not every project needs an agency with project managers, marketeers and a big building. Pay only for who/what you really need!</p>
         </div>
         <ul class="members">
-          <li class="member">
+          <li class="member" role="button" tabindex="0"> <!-- Add to cart should be triggered by space/enter key -->
             <div class="member__top">
               <div class="member__avatar">
                 <img src="images/avatar-gideon.png" alt="">
@@ -94,10 +94,10 @@
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam nisi rerum sapiente error exercitationem fugiat, cumque harum quibusdam sed a ipsam, officia adipisci reprehenderit magni dolor voluptatum. Deserunt, nisi, quibusdam.
             </div>
             <div class="member__footer">
-              <a href="#" class="member__anchor">Visit my portfolio</a>
+              <a href="#" class="member__anchor" title="Go to Gideon Heilbron's portfolio" target="_blank" rel="noopener noreferrer">Visit my portfolio</a>
             </div>
           </li>
-          <li class="member">
+          <li class="member" role="button" tabindex="0"> <!-- Add to cart should be triggered by space/enter key -->
             <div class="member__top">
               <div class="member__avatar">
                 <img src="images/avatar-murtada.png" alt="">
@@ -109,10 +109,10 @@
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam nisi rerum sapiente error exercitationem fugiat, cumque harum quibusdam sed a ipsam, officia adipisci reprehenderit magni dolor voluptatum. Deserunt, nisi, quibusdam.
             </div>
             <div class="member__footer">
-              <a href="#" class="member__anchor">Visit my portfolio</a>
+              <a href="#" class="member__anchor" title="Go to Murtada al Mousawy's portfolio" target="_blank" rel="noopener noreferrer">Visit my portfolio</a>
             </div>
           </li>
-          <li class="member">
+          <li class="member" role="button" tabindex="0"> <!-- Add to cart should be triggered by space/enter key -->
             <div class="member__top">
               <div class="member__avatar">
                 <img src="images/avatar-gideon.png" alt="">
@@ -124,10 +124,10 @@
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam nisi rerum sapiente error exercitationem fugiat, cumque harum quibusdam sed a ipsam, officia adipisci reprehenderit magni dolor voluptatum. Deserunt, nisi, quibusdam.
             </div>
             <div class="member__footer">
-              <a href="#" class="member__anchor">Visit my portfolio</a>
+              <a href="#" class="member__anchor" title="Go to Gideon Heilbron's portfolio" target="_blank" rel="noopener noreferrer">Visit my portfolio</a>
             </div>
           </li>
-          <li class="member">
+          <li class="member" role="button" tabindex="0"> <!-- Add to cart should be triggered by space/enter key -->
             <div class="member__top">
               <div class="member__avatar">
                 <img src="images/avatar-murtada.png" alt="">
@@ -139,10 +139,10 @@
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam nisi rerum sapiente error exercitationem fugiat, cumque harum quibusdam sed a ipsam, officia adipisci reprehenderit magni dolor voluptatum. Deserunt, nisi, quibusdam.
             </div>
             <div class="member__footer">
-              <a href="#" class="member__anchor">Visit my portfolio</a>
+              <a href="#" class="member__anchor" title="Go to Murtada al Mousawy's portfolio" target="_blank" rel="noopener noreferrer">Visit my portfolio</a>
             </div>
           </li>
-          <li class="member">
+          <li class="member" role="button" tabindex="0"> <!-- Add to cart should be triggered by space/enter key -->
             <div class="member__top">
               <div class="member__avatar">
                 <img src="images/avatar-gideon.png" alt="">
@@ -154,7 +154,7 @@
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam nisi rerum sapiente error exercitationem fugiat, cumque harum quibusdam sed a ipsam, officia adipisci reprehenderit magni dolor voluptatum. Deserunt, nisi, quibusdam.
             </div>
             <div class="member__footer">
-              <a href="#" class="member__anchor">Visit my portfolio</a>
+              <a href="#" class="member__anchor" title="Go to Gideon Heilbron's portfolio" target="_blank" rel="noopener noreferrer">Visit my portfolio</a>
             </div>
           </li>
         </ul>
@@ -164,29 +164,29 @@
           <div>
             <ul class="clients">
               <li class="client">
-                <img src="images/client-redkiwi.png" alt="">
+                <img src="images/client-redkiwi.png" alt="RedKiwi logo">
               </li>
               <li class="client">
-                <img src="images/client-ggz.png" alt="">
+                <img src="images/client-ggz.png" alt="GGZ Ingeest logo">
               </li>
               <li class="client">
-                <img src="images/client-dok.png" alt="">
+                <img src="images/client-dok.png" alt="DOK logo">
               </li>
               <li class="client">
-                <img src="images/client-woonz.png" alt="">
+                <img src="images/client-woonz.png" alt="Woonz logo">
               </li>
               <li class="client">
-                <img src="images/client-keylane.png" alt="">
+                <img src="images/client-keylane.png" alt="Keylane logo">
               </li>
               <li class="client">
-                <img src="images/client-ematters.png" alt="">
+                <img src="images/client-ematters.png" alt="Ematters logo">
               </li>
             </ul>
           </div>
           <div>
             <h1>Clients & Projects</h1>
-            <p>Members of Cursief have worked for a wide range of clients in a bunch of different sectors. Big, small, start-up, enterprise, everything is possible.</p>
-            <a class="readmore" href="#">View some cases</a>
+            <p class="section__description">Members of Cursief have worked for a wide range of clients in a bunch of different sectors. Big, small, start-up, enterprise, everything is possible.</p>
+            <a class="readmore" title="View a few cases from our members" href="#">View some cases</a>
           </div>
         </div>
       </section>
@@ -208,22 +208,22 @@
         <span>© 2019 Cursief. All rights reserved.</span>
         <ul class="social social--footer">
           <li class="social-item">
-            <a class="social-item__anchor" href="#">
+            <a class="social-item__anchor" href="#" title="Go to our Twitter profile">
               <img src="images/icon-twitter.svg" alt="">
             </a>
           </li>
           <li class="social-item">
-            <a class="social-item__anchor" href="#">
+            <a class="social-item__anchor" href="#" title="Go to our LinkedIn page">
               <img src="images/icon-linkedin.svg" alt="">
             </a>
           </li>
           <li class="social-item">
-            <a class="social-item__anchor" href="#">
+            <a class="social-item__anchor" href="#" title="Go to our GitHub page">
               <img src="images/icon-github.svg" alt="">
             </a>
           </li>
           <li class="social-item">
-            <a class="social-item__anchor" href="#">
+            <a class="social-item__anchor" href="#" title="Go to our Dribbble page">
               <img src="images/icon-dribbble.svg" alt="">
             </a>
           </li>
