feat(cart): Add a few fancy animations

--- a/src/index.html
+++ b/src/index.html
@@ -187,7 +187,9 @@
       </section>
       <div class="cart">
         <span class="cart__label">Team</span>
-        <div class="cart__amount"></div>
+        <div class="cart__amount-holder">
+          <div class="cart__amount"></div>
+        </div>
         <div class="cart__content-holder">
           <div class="cart-content"></div>
         </div>
@@ -202,15 +204,19 @@
 
     <template id="cart-item">
       <div class="cart-item">
-        <div class="cart-item__image"></div>
-        <div class="cart-item__title"></div>
-        <div class="cart-item__remove"></div>
+        <div class="cart-item__content">
+          <div class="cart-item__image"></div>
+          <div class="cart-item__title"></div>
+          <div class="cart-item__remove"></div>
+        </div>
       </div>
     </template>
 
     <template id="cart-item-placeholder">
       <div class="cart-item cart-item--placeholder">
-        <div class="cart-item__title">Add members to build your team!</div>
+        <div class="cart-item__content">
+          <div class="cart-item__title">Add members to build your team!</div>
+        </div>
       </div>
     </template>
 
