--- a/src/index.html
+++ b/src/index.html
@@ -245,7 +245,7 @@
 
     <template id="cart-item-placeholder">
       <div class="cart-item cart-item--placeholder">
-        <div class="cart-item__content">
+        <div class="cart-item__content cart-item__content--placeholder">
           <div class="cart-item__title">Add members to build your team!</div>
         </div>
       </div>
