--- a/src/index.html
+++ b/src/index.html
@@ -233,6 +233,9 @@
                 <label class="button button--option" for="option-newcontent">New content</label>
               </div>
               <div class="contact__row">
+                <span>We probably need</span> {{List of selected members}}
+              </div>
+              <div class="contact__row">
                 <span>Our budget is around</span>
                 <select name="" id="">
                   <option value="">Not yet defined</option>
