feat(app): Add budget range slider as an alternative option.

--- a/src/index.html
+++ b/src/index.html
@@ -232,6 +232,7 @@
               </div>
               <div class="contact__row">
                 <span>Our budget is around</span>
+                <input type="range" class="contact__budget-slider" value="0" min="0" max="6">
                 <select name="" id="">
                   <option value="">Not yet defined</option>
                   <option value="">€ 500 - € 1.500</option>
