--- a/src/index.html
+++ b/src/index.html
@@ -82,7 +82,7 @@
           <p class="section__description">Not every project needs an agency with project managers, marketeers and a big building. Pay only for who/what you really need!</p>
         </div>
         <ul class="members">
-          <li class="member" role="button" tabindex="0"> <!-- Add to cart should be triggered by space/enter key -->
+          <li class="member" role="button" tabindex="0">
             <div class="member__top">
               <div class="member__avatar">
                 <img src="images/avatar-gideon.png" alt="">
@@ -94,10 +94,13 @@
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam nisi rerum sapiente error exercitationem fugiat, cumque harum quibusdam sed a ipsam, officia adipisci reprehenderit magni dolor voluptatum. Deserunt, nisi, quibusdam.
             </div>
             <div class="member__footer">
-              <a class="member__anchor" title="Go to Gideon Heilbron's portfolio" href="https://gideonheilbron.nl" target="_blank" rel="noopener noreferrer">Visit my portfolio</a>
+              <a class="member__anchor" title="Go to Gideon Heilbron's portfolio" href="https://gideonheilbron.nl" target="_blank" rel="noopener noreferrer">
+                <span>Visit my portfolio</span>
+                <svg width="18" height="18" viewBox="0 0 18 18" xmlns="http://www.w3.org/2000/svg"><path d="M16 16H2V2h7V0H2a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14c1.1 0 2-.9 2-2V9h-2v7zM11 0v2h3.59l-9.83 9.83 1.41 1.41L16 3.41V7h2V0h-7z" fill="#F0834A" fill-rule="nonzero"/></svg>
+              </a>
             </div>
           </li>
-          <li class="member" role="button" tabindex="0"> <!-- Add to cart should be triggered by space/enter key -->
+          <li class="member" role="button" tabindex="0">
             <div class="member__top">
               <div class="member__avatar">
                 <img src="images/avatar-murtada.png" alt="">
@@ -109,10 +112,13 @@
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam nisi rerum sapiente error exercitationem fugiat, cumque harum quibusdam sed a ipsam, officia adipisci reprehenderit magni dolor voluptatum. Deserunt, nisi, quibusdam.
             </div>
             <div class="member__footer">
-              <a class="member__anchor" title="Go to Murtada al Mousawy's portfolio" href="https://murtada.nl/" target="_blank" rel="noopener noreferrer">Visit my portfolio</a>
+              <a class="member__anchor" title="Go to Murtada al Mousawy's portfolio" href="https://murtada.nl/" target="_blank" rel="noopener noreferrer">
+                <span>Visit my portfolio</span>
+                <svg width="18" height="18" viewBox="0 0 18 18" xmlns="http://www.w3.org/2000/svg"><path d="M16 16H2V2h7V0H2a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14c1.1 0 2-.9 2-2V9h-2v7zM11 0v2h3.59l-9.83 9.83 1.41 1.41L16 3.41V7h2V0h-7z" fill="#F0834A" fill-rule="nonzero"/></svg>
+              </a>
             </div>
           </li>
-          <li class="member" role="button" tabindex="0"> <!-- Add to cart should be triggered by space/enter key -->
+          <li class="member" role="button" tabindex="0">
             <div class="member__top">
               <div class="member__avatar">
                 <img src="images/avatar-gideon.png" alt="">
@@ -124,10 +130,13 @@
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam nisi rerum sapiente error exercitationem fugiat, cumque harum quibusdam sed a ipsam, officia adipisci reprehenderit magni dolor voluptatum. Deserunt, nisi, quibusdam.
             </div>
             <div class="member__footer">
-              <a class="member__anchor" title="Go to Gideon Heilbron's portfolio" href="https://gideonheilbron.nl" target="_blank" rel="noopener noreferrer">Visit my portfolio</a>
+              <a class="member__anchor" title="Go to Gideon Heilbron's portfolio" href="https://gideonheilbron.nl" target="_blank" rel="noopener noreferrer">
+                <span>Visit my portfolio</span>
+                <svg width="18" height="18" viewBox="0 0 18 18" xmlns="http://www.w3.org/2000/svg"><path d="M16 16H2V2h7V0H2a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14c1.1 0 2-.9 2-2V9h-2v7zM11 0v2h3.59l-9.83 9.83 1.41 1.41L16 3.41V7h2V0h-7z" fill="#F0834A" fill-rule="nonzero"/></svg>
+              </a>
             </div>
           </li>
-          <li class="member" role="button" tabindex="0"> <!-- Add to cart should be triggered by space/enter key -->
+          <li class="member" role="button" tabindex="0">
             <div class="member__top">
               <div class="member__avatar">
                 <img src="images/avatar-murtada.png" alt="">
@@ -139,10 +148,13 @@
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam nisi rerum sapiente error exercitationem fugiat, cumque harum quibusdam sed a ipsam, officia adipisci reprehenderit magni dolor voluptatum. Deserunt, nisi, quibusdam.
             </div>
             <div class="member__footer">
-              <a class="member__anchor" title="Go to Murtada al Mousawy's portfolio" href="https://murtada.nl/" target="_blank" rel="noopener noreferrer">Visit my portfolio</a>
+              <a class="member__anchor" title="Go to Murtada al Mousawy's portfolio" href="https://murtada.nl/" target="_blank" rel="noopener noreferrer">
+                <span>Visit my portfolio</span>
+                <svg width="18" height="18" viewBox="0 0 18 18" xmlns="http://www.w3.org/2000/svg"><path d="M16 16H2V2h7V0H2a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14c1.1 0 2-.9 2-2V9h-2v7zM11 0v2h3.59l-9.83 9.83 1.41 1.41L16 3.41V7h2V0h-7z" fill="#F0834A" fill-rule="nonzero"/></svg>
+              </a>
             </div>
           </li>
-          <li class="member" role="button" tabindex="0"> <!-- Add to cart should be triggered by space/enter key -->
+          <li class="member" role="button" tabindex="0">
             <div class="member__top">
               <div class="member__avatar">
                 <img src="images/avatar-gideon.png" alt="">
@@ -154,7 +166,10 @@
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam nisi rerum sapiente error exercitationem fugiat, cumque harum quibusdam sed a ipsam, officia adipisci reprehenderit magni dolor voluptatum. Deserunt, nisi, quibusdam.
             </div>
             <div class="member__footer">
-              <a class="member__anchor" title="Go to Gideon Heilbron's portfolio" href="https://gideonheilbron.nl" target="_blank" rel="noopener noreferrer">Visit my portfolio</a>
+              <a class="member__anchor" title="Go to Gideon Heilbron's portfolio" href="https://gideonheilbron.nl" target="_blank" rel="noopener noreferrer">
+                <span>Visit my portfolio</span>
+                <svg width="18" height="18" viewBox="0 0 18 18" xmlns="http://www.w3.org/2000/svg"><path d="M16 16H2V2h7V0H2a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14c1.1 0 2-.9 2-2V9h-2v7zM11 0v2h3.59l-9.83 9.83 1.41 1.41L16 3.41V7h2V0h-7z" fill="#F0834A" fill-rule="nonzero"/></svg>
+              </a>
             </div>
           </li>
         </ul>
@@ -211,7 +226,7 @@
             <div class="contact__form">
               <div class="contact__row">Hi Cursief,</div>
               <div class="contact__row">
-                <span>I'm</span> <input class="contact__input" type="text" placeholder="Your name" data-bind="contact-input-name" required>, <span>from <input class="contact__input" type="text" placeholder="Company" data-bind="contact-input-company" required></span> and we are looking for someone who can help us with a <div class="request-sentence__main" data-type="main"></div>with <div class="request-sentence__extra"></div>.</div>
+                <span>I'm</span> <input class="contact__input" type="text" placeholder="insert your name" data-bind="contact-input-name" required>, <span>from <input class="contact__input" type="text" placeholder="insert your company name" data-bind="contact-input-company" required></span> and we are looking for someone who can help us with a <div class="request-sentence__main" data-type="main"></div>with <div class="request-sentence__extra"></div>.</div>
               <div class="contact__row contact__row--options">
                 <input class="option" id="option-static" type="checkbox" data-type="main" value="static">
                 <label class="button button--option" for="option-static">Static</label>
