fix(app): Improve animations.

--- a/src/index.html
+++ b/src/index.html
@@ -78,8 +78,10 @@
       </section>
       <section class="section section--center" id="members">
         <div class="section__container section__container--wide">
-          <h1>Choose your own <span class="strikethrough">adventure</span> team</h1>
-          <p class="section__description">Not every project needs an agency with project managers, marketeers and a big building. Pay only for who/what you really need!</p>
+          <div class="section__column">
+            <h1>Choose your own <span class="strikethrough">adventure</span> team</h1>
+            <p class="section__description">Not every project needs an agency with project managers, marketeers and a big building. Pay only for who/what you really need!</p>
+          </div>
         </div>
         <ul class="members">
           <li class="member" role="button" tabindex="0">
