fix(banner): Add heading.

--- a/src/index.html
+++ b/src/index.html
@@ -57,7 +57,9 @@
     <main id="home">
       <section class="banner">
         <div class="banner__container">
-          <h1 class="banner__heading">We help you make<br>the best digital products.</h1>
+          <div class="banner__heading">
+            <img src="images/banner-heading.png" alt="">
+          </div>
           <div class="banner__content">
             <p>We design, build and launch products for startups, established companies and ourselves. We help businesses grow through effective design and strategy. We live and breath the web. Let’s create some great things together!</p>
             <a class="button button--secondary" href="#">Contact us</a>
