fix(contact): Change stamp animation delay. fix(navigation): Add correct href to header button.

--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,7 @@
             </a>
           </li>
         </ul>
-        <a class="button button--primary" href="#">Build your team</a>
+        <a class="button button--primary" href="#members">Build your team</a>
       </div>
     </header>
     <main id="home">
