feat(home): Add correct social links.

--- a/src/index.html
+++ b/src/index.html
@@ -31,25 +31,25 @@
         </nav>
         <ul class="social">
           <li class="social-item">
-            <a class="social-item__anchor" href="#" title="Go to our Twitter profile">
+            <a class="social-item__anchor" href="https://twitter.com/cursief_hq" target="_blank" rel="noopener noreferrer" title="Go to our Twitter profile">
               <img src="images/icon-twitter.svg" alt="">
             </a>
           </li>
           <li class="social-item">
-            <a class="social-item__anchor" href="#" title="Go to our LinkedIn page">
+            <a class="social-item__anchor" href="https://linkedin.com/company/cursief-collective" target="_blank" rel="noopener noreferrer" title="Go to our LinkedIn page">
               <img src="images/icon-linkedin.svg" alt="">
             </a>
           </li>
           <li class="social-item">
-            <a class="social-item__anchor" href="#" title="Go to our GitHub page">
+            <a class="social-item__anchor" href="https://github.com/cursief" target="_blank" rel="noopener noreferrer" title="Go to our GitHub page">
               <img src="images/icon-github.svg" alt="">
             </a>
           </li>
-          <li class="social-item">
-            <a class="social-item__anchor" href="#" title="Go to our Dribbble page">
+<!--           <li class="social-item">
+            <a class="social-item__anchor" href="#" target="_blank" rel="noopener noreferrer" title="Go to our Dribbble page">
               <img src="images/icon-dribbble.svg" alt="">
             </a>
-          </li>
+          </li> -->
         </ul>
         <a class="button button--primary" href="#members">Build your team</a>
       </div>
@@ -288,25 +288,25 @@
         <span>&copy; 2019 Cursief. All rights reserved.</span>
         <ul class="social social--footer">
           <li class="social-item">
-            <a class="social-item__anchor" href="#" title="Go to our Twitter profile">
+            <a class="social-item__anchor" href="https://twitter.com/cursief_hq" target="_blank" rel="noopener noreferrer" title="Go to our Twitter profile">
               <img src="images/icon-twitter.svg" alt="">
             </a>
           </li>
           <li class="social-item">
-            <a class="social-item__anchor" href="#" title="Go to our LinkedIn page">
+            <a class="social-item__anchor" href="https://linkedin.com/company/cursief-collective" target="_blank" rel="noopener noreferrer" title="Go to our LinkedIn page">
               <img src="images/icon-linkedin.svg" alt="">
             </a>
           </li>
           <li class="social-item">
-            <a class="social-item__anchor" href="#" title="Go to our GitHub page">
+            <a class="social-item__anchor" href="https://github.com/cursief" target="_blank" rel="noopener noreferrer" title="Go to our GitHub page">
               <img src="images/icon-github.svg" alt="">
             </a>
           </li>
-          <li class="social-item">
-            <a class="social-item__anchor" href="#" title="Go to our Dribbble page">
+<!--           <li class="social-item">
+            <a class="social-item__anchor" href="#" target="_blank" rel="noopener noreferrer" title="Go to our Dribbble page">
               <img src="images/icon-dribbble.svg" alt="">
             </a>
-          </li>
+          </li> -->
         </ul>
       </div>
     </footer>
