feat(cart): Allow empty cart placeholder to contain multiple lines of text.

--- a/src/index.html
+++ b/src/index.html
@@ -324,7 +324,7 @@
     <template id="cart-item-placeholder">
       <div class="cart-item cart-item--placeholder">
         <div class="cart-item__content cart-item__content--placeholder">
-          <div class="cart-item__title">Add members to build your team!</div>
+          <div class="cart-item__title">Click on a member to add them to your team!</div>
         </div>
       </div>
     </template>
